# Website

./: -  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CNAME  CONTRIBUTORS.txt  LICENSE.rst  Makefile  Pipfile  README.md  _config.yml  backlog.mkd  deploy-requirements.txt  deploy.sh  fixtures.json  index.md  manage.py  pyproject.toml  pytest.ini  sam-template.yaml  samconfig.toml  tox.ini  zappa_commands.py  zappa_settings.json
.circleci/: config.yml
.github/: dependabot.yml
_layouts/: default.html  post.html  post.markdown
_posts/: 2014-03-09-welcome-to-jekyll.markdown  2014-06-21-lets-get-talking.markdown  2014-06-22-restarting.markdown  2014-06-23-the-odd-one-out.markdown  2014-06-24-mapping-the-projects.markdown  2014-06-25-mysociety.markdown  2014-06-26-a-fair-fight.markdown  2014-07-08-whats-going-on.markdown
blog/: index.html
css/: main.css
democracy_club/: asgi.py  context_processors.py  lambda_awsgi.py  lambda_basic_auth.py  lambda_mange.py  lambda_wsgi.py  urls.py  wsgi.py
democracy_club/apps/authorities/: README.md  admin.py  constants.py  helpers.py  models.py
democracy_club/apps/authorities/migrations/: 0001_initial.py  0002_auto_20160122_2226.py  0003_auto_20160122_2229.py  0004_auto_20160122_2248.py  0005_auto_20160122_2250.py  0006_auto_20160122_2313.py  0007_authorityservices.py  0008_auto_20160124_1443.py  0009_auto_20160124_1524.py  0010_auto_20160124_1533.py  0011_auto_20160124_1632.py  0012_mapitarea.py  0013_auto_20160129_1737.py  (+1 more)
democracy_club/apps/backlog/: apps.py  models.py  urls.py  views.py
democracy_club/apps/core/: __init__.py  apps.py  cloudfront.py  s3_lambda_storage.py  signals.py  views.py
democracy_club/apps/dc_members/: api.py  authentication.py  forms.py  models.py  urls.py  views.py
democracy_club/apps/donations/: context_processors.py  forms.py  helpers.py  middleware.py  tests.py  urls.py  views.py
democracy_club/apps/everyelection/: admin.py  api.py  forms.py  models.py  tests.py  urls.py  views.py
democracy_club/apps/hermes/: admin.py  blog-authors-2022-06-28.csv  feeds.py  models.py  renderers.py  settings.py  urls.py  views.py
democracy_club/apps/mailing_list/: urls.py
democracy_club/apps/members/: models.py  urls.py  views.py
democracy_club/apps/projects/: urls.py
democracy_club/apps/report_2016/: graphs.py  report.md  urls.py
democracy_club/apps/report_2017/: report.md  urls.py
democracy_club/apps/report_2018/: report.md  urls.py
democracy_club/apps/report_2019/: apps.py  report.md  urls.py
democracy_club/apps/report_2019_general_election/: apps.py  report.md  urls.py
democracy_club/apps/report_2021/: apps.py  report.md  urls.py
democracy_club/apps/report_2022/: apps.py  report.md  urls.py
democracy_club/apps/report_whos_missing/: apps.py  report.md  urls.py  views.py
democracy_club/apps/reports/: report_2016.md  report_2017.md  report_2018.md  report_2019.md  report_2021.md  report_2022.md  report_2023.md  report_2024.md  report_2025.md  report_2026.md  report_odi_registers.md  report_whos_missing.md  urls.py
democracy_club/apps/research/: api.py  models.py  urls.py  views.py
democracy_club/apps/results/: models.py  tests.py
democracy_club/apps/wheredoivote_user_feedback/: report2017.md  urls.py
democracy_club/assets/: manifest.json
democracy_club/assets/css/: foundation.min.css  main.css  research.css  styles.scss
democracy_club/assets/js/: global.js  research.js  research.min.js  scripts.js  signup_form.js  signup_form.min.js
democracy_club/assets/scss/: styles.scss
democracy_club/settings/: aws_lambda.py  base.py  testing.py  zappa.py
democracy_club/static/css/: _backlog.scss  main.css  styles.css  typebase.css
democracy_club/static/js/: foundation.min.js  research.min.js  scripts.js
democracy_club/templates/: 404.html  500.html  about.html  base.html  code-of-conduct.html  contact.html  data.html  donate.html  donate_thanks.html  for_voters.html  get_involved.html  home.html  home_header.html  impact.html  privacy.html  projects-and-data.html  projects.html  report_base.html  research_questions.handlebars  signup_form.handlebars  signup_form_thanks.handlebars  support_us.html  thanks.html  thanks_finished.html
democracy_club/templates/_includes/: case_studies.html  footer_internal_links.html  form--donate-box.html  voter_info_documentation.html
democracy_club/templates/about/: about_base.html  funding.html  impact.html  index.html  jobs.html  support_us.html  team.html
democracy_club/templates/account/: login.html
democracy_club/templates/data_apis/: base.html  data.html  voting_information_api.html
democracy_club/templates/dc_members/: base.html  detail.html  edit.html
democracy_club/templates/election-ids/: home.html  reference.html
democracy_club/templates/email_form/: mailing_list_form.html
democracy_club/templates/hermes/: feed_post_description.html  post_detail.html  post_list.html
democracy_club/templates/members/: base.html  detail.html  edit.html
democracy_club/templates/polling-stations/: embed_code.html  faqs.html  home.html  polling_stations_base.html  technical.html  upload_data.html
democracy_club/templates/projects/: index.html
democracy_club/templates/research/: base.html  case_studies.html  impact.html  media.html
democracy_club/tests/: test_urls.py
docs/: __init__.py  conf.py  deploy.rst  index.rst  install.rst  new-deploy.md  tests.rst
fixtures/vcr_cassettes/: test_backlog_import_cards.yaml  test_donation_redirect_url.yaml
get_involved/: index.md
join/: index.html
lambda-layers/DependenciesLayer/: Makefile
requirements/: base.txt  local.txt  production.txt  testing.txt
samconfig.toml.d/: ci-production.toml  ci-staging.toml
(+181 files in other folders)
