[project]
name = "website"
version = "0.0.0"
description = "democracyclub.org.uk"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "django-storages==1.14.4",
    "markdown-headdown==0.1.3",
    "psycopg2-binary==2.9.10",
    "sentry-sdk==2.17.0",
    "sorl-thumbnail==12.11.0",
    "Pillow==10.3.0",
    "Markdown==3.3.7",
    "django==4.2.22",
    "aws-wsgi",
    "django-typogrify",
    "dc-design-system",
    "dc-django-utils",
]

[tool.uv]
package = false

[tool.uv.sources]
aws-wsgi = { url = "https://github.com/DemocracyClub/awsgi/archive/refs/tags/v0.2.8.tar.gz" }
django-typogrify = { url = "https://github.com/matthewn/django-typogrify/archive/refs/tags/v2.0.tar.gz" }
dc-design-system = { url = "https://github.com/DemocracyClub/design-system/archive/refs/tags/0.6.0.tar.gz" }
dc-django-utils = { url = "https://github.com/DemocracyClub/dc_django_utils/archive/refs/tags/8.0.1.tar.gz" }

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-django==4.9.0",
    "pytest-ruff==0.4.1",
    "pytest-subtests==0.13.1",
    "ruff==0.7.1",
    "ipdb==0.13.13",
    "pre-commit==3.5.0",
    "feedparser==6.0.11",
    "djhtml==3.0.7",
]

[tool.ruff]
line-length = 80
extend-exclude = ["democracy_club/settings/local.py"]

[tool.ruff.lint]
ignore = ["E501"]
extend-select = [
    "I",
    "C4",
    "SIM",
    "Q003",
    "RET",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "@abstractmethod"
]

[tool.pytest.ini_options]
norecursedirs =[
    "democracy_club/static_root",
    "src",
    ".aws-sam",
    ".ruff-cache",
]
DJANGO_SETTINGS_MODULE = "democracy_club.settings.testing"
addopts =[
    "--ignore=*/__pycache__",
    "--ignore=.*",
    "--ignore=.download-cache",
    "--ignore=democracy_club/settings/local.py",
    "--ignore=lib",
    "--ruff",
    "--ruff-format",
]
