[project]
name = "website"
version = "0.0.0"
description = "democracyclub.org.uk"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "django-storages==1.14.6",
    "markdown-headdown==0.1.3",
    "psycopg2-binary==2.9.11",
    "sentry-sdk==2.41.0",
    "sorl-thumbnail==12.11.0",
    "Pillow==11.3.0",
    "Markdown==3.9",
    "django==4.2.25",
    "aws-wsgi",
    "django-typogrify",
    "dc-design-system",
    "dc-django-utils",
]

[tool.uv]
package = false

required-version = "==0.8.*"

[tool.uv.sources]
aws-wsgi = { git = "https://github.com/DemocracyClub/awsgi.git", tag = "v0.2.8" }
django-typogrify = { git = "https://github.com/matthewn/django-typogrify.git", tag = "v2.0" }
dc-design-system = { git = "https://github.com/DemocracyClub/design-system.git", tag = "0.6.0" }
dc-django-utils = { git = "https://github.com/DemocracyClub/dc_django_utils.git", tag =  "8.0.4" }

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pytest-django==4.11.1",
    "pytest-ruff==0.5",
    "pytest-subtests==0.14.2",
    "ruff==0.14.0",
    "ipdb==0.13.13",
    "pre-commit==4.3.0",
    "feedparser==6.0.12",
    "djhtml==3.0.10",
]

[tool.ruff]
line-length = 80
extend-exclude = ["democracy_club/settings/local.py"]

[tool.ruff.lint]
ignore = ["E501"]
extend-select = [
    "I",
    "C4",
    "SIM",
    "Q003",
    "RET",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "@abstractmethod"
]

[tool.pytest.ini_options]
norecursedirs =[
    "democracy_club/static_root",
    "src",
    ".aws-sam",
    ".ruff-cache",
]
DJANGO_SETTINGS_MODULE = "democracy_club.settings.testing"
addopts =[
    "--ignore=*/__pycache__",
    "--ignore=.*",
    "--ignore=.download-cache",
    "--ignore=democracy_club/settings/local.py",
    "--ignore=lib",
    "--ruff",
    "--ruff-format",
]
